--- a/dashboard/tsconfig.json
+++ b/dashboard/tsconfig.json
@@ -17,7 +17,8 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
